[package]
name = "audio-extractor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.37"
wee_alloc = { version = "0.4.5", optional = true }
